--- a/web_bootstrap/visimisi.html
+++ b/web_bootstrap/visimisi.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Index - Mentor Bootstrap Template</title>
+    <title>Courses - Mentor Bootstrap Template</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
 
@@ -47,7 +47,7 @@
   ======================================================== -->
   </head>
 
-  <body class="index-page">
+  <body class="courses-page">
     <header id="header" class="header d-flex align-items-center sticky-top">
       <div
         class="container-fluid container-xl position-relative d-flex align-items-center"
@@ -65,7 +65,7 @@
               <a href="index.html">Home<br /></a>
             </li>
             <li><a href="tentang.html">Tentang</a></li>
-            <li><a href="visimisi.html">Visi Misi</a></li>
+            <li><a href="visimisi.html" class="active">Visi Misi</a></li>
             <li><a href="kegiatan.html">Kegiatan</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
@@ -75,100 +75,57 @@
     </header>
 
     <main class="main">
-      <!-- Hero Section -->
-      <section id="hero" class="hero section dark-background">
-        <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" />
-
-        <div class="container">
-          <h2 data-aos="fade-up" data-aos-delay="100">
-            SELAMAT DATANG di HIMATIKA
-          </h2>
-          <p data-aos="fade-up" data-aos-delay="200">
-            Disini Himpunan Mahasiswa Prodi Informatika
-          </p>
-        </div>
-      </section>
-      <!-- /Hero Section -->
-
-      <!-- Trainers Index Section -->
-      <section id="trainers-index" class="section trainers-index">
-        <div class="container">
-          <div class="row justify-content-center mb-4">
-            <div class="col-lg-4 col-md-6 d-flex">
-              <div class="member text-center">
-                <img
-                  src="assets/img/profil/kaprodi.jpg"
-                  class="img-fluid mx-auto d-block"
-                  alt=""
-                  style="max-width: 300px"
-                />
-                <div class="member-content">
-                  <h4>JOKO ISKANDAR, M.Kom</h4>
-                  <span>Kaprodi Informatika</span>
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter-x"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="row justify-content-center">
-            <div
-              class="col-lg-4 col-md-6 d-flex"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
-              <div class="member">
-                <img
-                  src="assets/img/profil/ketua.jpg"
-                  class="img-fluid"
-                  alt=""
-                />
-                <div class="member-content">
-                  <h4>KRISNA ARIS SAPUTRA</h4>
-                  <span>Ketua HIMATIKA</span>
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter-x"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div
-              class="col-lg-4 col-md-6 d-flex"
-              data-aos="fade-up"
-              data-aos-delay="300"
-            >
-              <div class="member">
-                <img
-                  src="assets/img/profil/wakil.jpg"
-                  class="img-fluid"
-                  alt=""
-                />
-                <div class="member-content">
-                  <h4>ALIFIA ANINDITA WIDYANTI</h4>
-                  <span>Wakil Ketua HIMATIKA</span>
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter-x"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
-                </div>
+      <!-- Page Title -->
+      <div class="page-title" data-aos="fade">
+        <div class="heading">
+          <div class="container">
+            <div class="row d-flex justify-content-center text-center">
+              <div class="col-lg-8">
+                <h1>Visi Misi HIMATIKA</h1>
               </div>
             </div>
           </div>
         </div>
-      </section>
+        <nav class="breadcrumbs">
+          <div class="container">
+            <ol>
+              <li><a href="index.html">Home</a></li>
+              <li class="current">Visi Misi</li>
+            </ol>
+          </div>
+        </nav>
+      </div>
+      <!-- End Page Title -->
 
-      <!-- /Trainers Index Section -->
+      <!-- Courses Section -->
+      <section id="courses" class="courses section">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <h4>Visi</h4>
+              <p>
+                Mewujudkan mahasiswa Informatika yang inovatif, kolaboratif, dan
+                berdaya saing global melalui pengembangan teknologi dan
+                karakter.
+              </p>
+            </div>
+            <div class="col-md-6">
+              <h4>Misi</h4>
+              <ul>
+                <li>
+                  Mendorong pengembangan soft skill dan hard skill anggota
+                  HIMATIF.
+                </li>
+                <li>Menjadi jembatan komunikasi antara mahasiswa dan prodi.</li>
+                <li>
+                  Mengadakan kegiatan yang membangun semangat inovasi dan
+                  teknologi.
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer id="footer" class="bg-blue-900 text-black py-8 px-6">
