--- a/web_bootstrap/contact.html
+++ b/web_bootstrap/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Index - Mentor Bootstrap Template</title>
+    <title>Contact - Mentor Bootstrap Template</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
 
@@ -47,7 +47,7 @@
   ======================================================== -->
   </head>
 
-  <body class="index-page">
+  <body class="contact-page">
     <header id="header" class="header d-flex align-items-center sticky-top">
       <div
         class="container-fluid container-xl position-relative d-flex align-items-center"
@@ -67,7 +67,7 @@
             <li><a href="tentang.html">Tentang</a></li>
             <li><a href="visimisi.html">Visi Misi</a></li>
             <li><a href="kegiatan.html">Kegiatan</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html" class="active">Contact</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
@@ -75,101 +75,111 @@
     </header>
 
     <main class="main">
-      <!-- Hero Section -->
-      <section id="hero" class="hero section dark-background">
-        <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" />
-
-        <div class="container">
-          <h2 data-aos="fade-up" data-aos-delay="100">
-            SELAMAT DATANG di HIMATIKA
-          </h2>
-          <p data-aos="fade-up" data-aos-delay="200">
-            Disini Himpunan Mahasiswa Prodi Informatika
-          </p>
-        </div>
-      </section>
-      <!-- /Hero Section -->
-
-      <!-- Trainers Index Section -->
-      <section id="trainers-index" class="section trainers-index">
-        <div class="container">
-          <div class="row justify-content-center mb-4">
-            <div class="col-lg-4 col-md-6 d-flex">
-              <div class="member text-center">
-                <img
-                  src="assets/img/profil/kaprodi.jpg"
-                  class="img-fluid mx-auto d-block"
-                  alt=""
-                  style="max-width: 300px"
-                />
-                <div class="member-content">
-                  <h4>JOKO ISKANDAR, M.Kom</h4>
-                  <span>Kaprodi Informatika</span>
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter-x"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
-                </div>
+      <!-- Page Title -->
+      <div class="page-title" data-aos="fade">
+        <div class="heading">
+          <div class="container">
+            <div class="row d-flex justify-content-center text-center">
+              <div class="col-lg-8">
+                <h1>Ayo Bergabung Bersama Kami!</h1>
+                <p class="mb-0">
+                  Jadilah bagian dari perubahan dan kemajuan Informatika di
+                  kampus kita.
+                </p>
               </div>
             </div>
           </div>
+        </div>
+        <nav class="breadcrumbs">
+          <div class="container">
+            <ol>
+              <li><a href="index.html">Home</a></li>
+              <li class="current">Contact</li>
+            </ol>
+          </div>
+        </nav>
+      </div>
+      <!-- End Page Title -->
 
+      <!-- Contact Section -->
+      <section id="contact" class="contact section">
+        <div class="container">
+          <h2 class="text-center mb-4">Pendaftaran Anggota HIMATIKA</h2>
           <div class="row justify-content-center">
-            <div
-              class="col-lg-4 col-md-6 d-flex"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
-              <div class="member">
-                <img
-                  src="assets/img/profil/ketua.jpg"
-                  class="img-fluid"
-                  alt=""
-                />
-                <div class="member-content">
-                  <h4>KRISNA ARIS SAPUTRA</h4>
-                  <span>Ketua HIMATIKA</span>
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter-x"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
+            <div class="col-md-6">
+              <form id="forWA">
+                <div class="mb-3">
+                  <label for="namaLengkap" class="form-label"
+                    >Nama Lengkap</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="namaLengkap"
+                    placeholder="Masukkan nama Anda"
+                  />
                 </div>
-              </div>
-            </div>
-
-            <div
-              class="col-lg-4 col-md-6 d-flex"
-              data-aos="fade-up"
-              data-aos-delay="300"
-            >
-              <div class="member">
-                <img
-                  src="assets/img/profil/wakil.jpg"
-                  class="img-fluid"
-                  alt=""
-                />
-                <div class="member-content">
-                  <h4>ALIFIA ANINDITA WIDYANTI</h4>
-                  <span>Wakil Ketua HIMATIKA</span>
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter-x"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
+                <div class="mb-3">
+                  <label for="nim" class="form-label">NIM</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="nim"
+                    placeholder="Masukkan NIM"
+                  />
                 </div>
-              </div>
+                <div class="mb-3">
+                  <label for="email" class="form-label">Email Aktif</label>
+                  <input
+                    type="email"
+                    class="form-control"
+                    id="email"
+                    placeholder="Masukkan email Anda"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="alasan" class="form-label"
+                    >Alasan Bergabung</label
+                  >
+                  <textarea
+                    class="form-control"
+                    id="alasan"
+                    rows="3"
+                  ></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary w-100">
+                  Daftar
+                </button>
+              </form>
             </div>
           </div>
         </div>
       </section>
-
-      <!-- /Trainers Index Section -->
+      <!-- /Contact Section -->
     </main>
+    <script>
+      document
+        .getElementById("forWA")
+        .addEventListener("submit", function (event) {
+          event.preventDefault();
+
+          var nama = document.getElementById("namaLengkap").value;
+          var nim = document.getElementById("nim").value;
+          var email = document.getElementById("email").value;
+          var alasan = document.getElementById("alasan").value;
+
+          var noWA = "6285732803785"; // Ganti dengan nomor WA tujuan
+
+          var teks =
+            `Halo, saya ingin mendaftar sebagai anggota HIMATIKA.%0A%0A` +
+            `Nama Lengkap: ${nama}%0A` +
+            `NIM: ${nim}%0A` +
+            `Email: ${email}%0A` +
+            `Alasan Bergabung: ${alasan}`;
+
+          window.open(`https://wa.me/${noWA}?text=${teks}`, "_blank");
+        });
+    </script>
 
     <footer id="footer" class="bg-blue-900 text-black py-8 px-6">
       <div class="max-w-6xl mx-auto text-center">
@@ -203,7 +213,6 @@
 
     <!-- Preloader -->
     <div id="preloader"></div>
-
     <!-- Vendor JS Files -->
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/php-email-form/validate.js"></script>
