--- a/web_bootstrap/contact.html
+++ b/web_bootstrap/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Contact - Mentor Bootstrap Template</title>
+    <title>Himpunan Mahasiswa Prodi</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
 
