--- a/web_bootstrap/kegiatan.html
+++ b/web_bootstrap/kegiatan.html
@@ -162,48 +162,44 @@
         </div>
       </section>
 
-      <section id="testimoni">
-        <h2>Apa Kata Mereka?</h2>
-        <div class="testimoni-container">
-          <div class="testimoni-box">
-            <p>
-              "Bergabung di HIMATIKA membuat saya lebih percaya diri dan aktif
-              di berbagai kegiatan."
-            </p>
-            <p class="author">- Andi, Angkatan 2022</p>
-          </div>
-          <div class="testimoni-box">
-            <p>
-              "Kegiatannya seru dan bermanfaat. Saya jadi punya banyak teman dan
-              relasi baru!"
-            </p>
-            <p class="author">- Rina, Angkatan 2023</p>
-          </div>
+      <section id="testimoni" class="py-5 bg-white">
+  <div class="container">
+    <h2 class="text-center mb-4" data-aos="fade-up">Apa Kata Mereka?</h2>
+    <div class="row justify-content-center">
+      <div class="col-md-5 mb-4" data-aos="fade-up" data-aos-delay="100">
+        <div class="p-4 shadow rounded bg-light">
+          <p class="fst-italic">
+            "Bergabung di HIMATIKA membuat saya lebih percaya diri dan aktif di berbagai kegiatan."
+          </p>
+          <p class="fw-bold text-end">- Andi, Angkatan 2022</p>
         </div>
-      </section>
+      </div>
+      <div class="col-md-5 mb-4" data-aos="fade-up" data-aos-delay="200">
+        <div class="p-4 shadow rounded bg-light">
+          <p class="fst-italic">
+            "Kegiatannya seru dan bermanfaat. Saya jadi punya banyak teman dan relasi baru!"
+          </p>
+          <p class="fw-bold text-end">- Rina, Angkatan 2023</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
     </main>
 
-    <footer id="footer" class="bg-blue-900 text-black py-8 px-6">
-      <div class="max-w-6xl mx-auto text-center">
-        <p class="mb-2">
-          Kontak: himaprodi@informatika.ac.id | Telp: 0857-3280-3785
-        </p>
-        <div class="flex justify-center space-x-4">
-          <a
-            href="https://www.instagram.com/himatika.ubhi/"
-            target="_blank"
-            rel="noopener noreferrer"
-            class="hover:text-gray-300"
-          >
-            <i class="bi bi-instagram"></i>
-            Instagram
-          </a>
-        </div>
-        <p class="mt-4 text-sm">
-          &copy; 2025 HIMAPRODI Informatika. All rights reserved.
-        </p>
-      </div>
-    </footer>
+    <footer id="footer" style="background-color: #012a4a; color: #fff; padding: 40px 0;">
+  <div class="container text-center">
+    <p class="mb-2">Kontak: himaprodi@informatika.ac.id | Telp: 0857-3280-3785</p>
+    <div class="d-flex justify-content-center gap-3">
+      <a href="https://www.instagram.com/himatika.ubhi/" class="text-white">
+        <i class="bi bi-instagram"></i> Instagram
+      </a>
+    </div>
+    <p class="mt-3 text-light">&copy; 2025 HIMAPRODI Informatika. All rights reserved.</p>
+  </div>
+</footer>
+
     <!-- Scroll Top -->
     <a
       href="#"
