--- a/web_bootstrap/tentang.html
+++ b/web_bootstrap/tentang.html
@@ -98,59 +98,54 @@
       <!-- End Page Title -->
 
       <!-- About Us Section -->
-      <section id="about-us" class="section about-us">
-        <div class="container">
-          <div class="row gy-4">
-            <div
-              class="col-lg-6 order-1 order-lg-2"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
-              <img src="assets/img/about-2.jpg" class="img-fluid" alt="" />
-            </div>
-
-            <div
-              class="col-lg-6 order-2 order-lg-1 content"
-              data-aos="fade-up"
-              data-aos-delay="200"
-            >
-              <p class="fst-italic">
-                Himpunan Mahasiswa Informatika (HIMATIKA) berperan sebagai
-                jembatan antara mahasiswa, dosen, dan pihak fakultas dalam
-                membangun lingkungan akademik yang aktif, kolaboratif, dan
-                inovatif. Melalui berbagai program kerja, HIMATIKA berkomitmen
-                untuk menciptakan ruang belajar, berorganisasi, dan berkarya
-                guna mendukung terciptanya lulusan Informatika yang unggul dan
-                berdaya saing tinggi di era digital.
-              </p>
-            </div>
-          </div>
+      <!-- Ganti bagian <section id="about-us"> dengan berikut ini -->
+<section id="about-us" class="section about-us py-5 bg-light">
+  <div class="container">
+    <div class="row gy-5 align-items-center">
+      <!-- Gambar -->
+      <div class="col-lg-6" data-aos="fade-left">
+        <div class="position-relative shadow rounded overflow-hidden">
+          <img src="assets/img/about-2.jpg" class="img-fluid rounded" alt="Tentang HIMATIKA" />
         </div>
-      </section>
+      </div>
+
+      <!-- Konten -->
+      <div class="col-lg-6" data-aos="fade-right">
+        <h2 class="fw-bold mb-3 text-primary">Tentang HIMATIKA</h2>
+        <p class="fst-italic text-muted mb-4">
+          <i class="bi bi-quote text-secondary fs-4 me-2"></i>
+          Himpunan Mahasiswa Informatika (HIMATIKA) berperan sebagai jembatan antara mahasiswa, dosen, dan pihak fakultas dalam membangun lingkungan akademik yang aktif, kolaboratif, dan inovatif.
+        </p>
+        <ul class="list-unstyled text-muted">
+          <li class="mb-2"><i class="bi bi-check-circle-fill text-success me-2"></i> Meningkatkan kualitas akademik & non-akademik</li>
+          <li class="mb-2"><i class="bi bi-check-circle-fill text-success me-2"></i> Mendorong inovasi dan kolaborasi lintas bidang</li>
+          <li class="mb-2"><i class="bi bi-check-circle-fill text-success me-2"></i> Menjadi wadah pengembangan potensi mahasiswa</li>
+        </ul>
+        <div class="mt-4">
+          <a href="kegiatan.html" class="btn btn-primary shadow-sm px-4 py-2">
+            Jelajahi Kegiatan <i class="bi bi-arrow-right ms-1"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
       <!-- /About Us Section -->
     </main>
 
-    <footer id="footer" class="bg-blue-900 text-black py-8 px-6">
-      <div class="max-w-6xl mx-auto text-center">
-        <p class="mb-2">
-          Kontak: himaprodi@informatika.ac.id | Telp: 0857-3280-3785
-        </p>
-        <div class="flex justify-center space-x-4">
-          <a
-            href="https://www.instagram.com/himatika.ubhi/"
-            target="_blank"
-            rel="noopener noreferrer"
-            class="hover:text-gray-300"
-          >
-            <i class="bi bi-instagram"></i>
-            Instagram
-          </a>
-        </div>
-        <p class="mt-4 text-sm">
-          &copy; 2025 HIMAPRODI Informatika. All rights reserved.
-        </p>
-      </div>
-    </footer>
+    <footer id="footer" style="background-color: #012a4a; color: #fff; padding: 40px 0;">
+  <div class="container text-center">
+    <p class="mb-2">Kontak: himaprodi@informatika.ac.id | Telp: 0857-3280-3785</p>
+    <div class="d-flex justify-content-center gap-3">
+      <a href="https://www.instagram.com/himatika.ubhi/" class="text-white">
+        <i class="bi bi-instagram"></i> Instagram
+      </a>
+    </div>
+    <p class="mt-3 text-light">&copy; 2025 HIMAPRODI Informatika. All rights reserved.</p>
+  </div>
+</footer>
+
 
     <!-- Scroll Top -->
     <a
