--- a/web_bootstrap/visimisi.html
+++ b/web_bootstrap/visimisi.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Himpunan Mahasiswa Prodi</title>
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
+    <title>Visi Misi - HIMATIKA</title>
+    <meta name="description" content="Visi dan Misi Himpunan Mahasiswa Informatika" />
+    <meta name="keywords" content="HIMATIKA, Visi, Misi, Mahasiswa, Informatika" />
 
     <!-- Favicons -->
     <link href="assets/img/logo.jpg" rel="icon" />
@@ -15,55 +15,33 @@
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
 
     <!-- Vendor CSS Files -->
-    <link
-      href="assets/vendor/bootstrap/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="assets/vendor/bootstrap-icons/bootstrap-icons.css"
-      rel="stylesheet"
-    />
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet" />
     <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
-    <link
-      href="assets/vendor/glightbox/css/glightbox.min.css"
-      rel="stylesheet"
-    />
+    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet" />
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
 
     <!-- Main CSS File -->
     <link href="assets/css/main.css" rel="stylesheet" />
-
-    <!-- =======================================================
-  * Template Name: HIMATIKA
-  * Template URL: https://bootstrapmade.com/mentor-free-education-bootstrap-theme/
-  * Updated: Aug 07 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
   </head>
 
   <body class="courses-page">
+    <!-- Header -->
     <header id="header" class="header d-flex align-items-center sticky-top">
-      <div
-        class="container-fluid container-xl position-relative d-flex align-items-center"
-      >
+      <div class="container-fluid container-xl position-relative d-flex align-items-center">
         <a href="index.html" class="logo d-flex align-items-center me-auto">
-          <!-- Uncomment the line below if you also wish to use an image logo -->
-          <!-- <img src="assets/img/logo.png" alt=""> -->
-          <img src="assets/img/logo.jpg" alt="" />
+          <img src="assets/img/logo.jpg" alt="Logo HIMATIKA" />
           <h1 class="sitename">HIMATIKA</h1>
         </a>
 
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li>
-              <a href="index.html">Home<br /></a>
-            </li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="tentang.html">Tentang</a></li>
             <li><a href="visimisi.html" class="active">Visi Misi</a></li>
             <li><a href="kegiatan.html">Kegiatan</a></li>
@@ -74,6 +52,7 @@
       </div>
     </header>
 
+    <!-- Main Content -->
     <main class="main">
       <!-- Page Title -->
       <div class="page-title" data-aos="fade">
@@ -97,66 +76,52 @@
       </div>
       <!-- End Page Title -->
 
-      <!-- Courses Section -->
-      <section id="courses" class="courses section">
+      <!-- Visi Misi Section -->
+      <section id="courses" class="courses section" data-aos="fade-up">
         <div class="container">
-          <div class="row">
+          <div class="row gy-4">
             <div class="col-md-6">
-              <h4>Visi</h4>
-              <p>
-                Mewujudkan mahasiswa Informatika yang inovatif, kolaboratif, dan
-                berdaya saing global melalui pengembangan teknologi dan
-                karakter.
-              </p>
+              <div class="card shadow-sm border-0 h-100 p-4">
+                <h4 class="mb-3">Visi</h4>
+                <p class="mb-0">
+                  Mewujudkan mahasiswa Informatika yang inovatif, kolaboratif,
+                  dan berdaya saing global melalui pengembangan teknologi dan karakter.
+                </p>
+              </div>
             </div>
             <div class="col-md-6">
-              <h4>Misi</h4>
-              <ul>
-                <li>
-                  Mendorong pengembangan soft skill dan hard skill anggota
-                  HIMATIF.
-                </li>
-                <li>Menjadi jembatan komunikasi antara mahasiswa dan prodi.</li>
-                <li>
-                  Mengadakan kegiatan yang membangun semangat inovasi dan
-                  teknologi.
-                </li>
-              </ul>
+              <div class="card shadow-sm border-0 h-100 p-4">
+                <h4 class="mb-3">Misi</h4>
+                <ul class="mb-0 ps-3">
+                  <li>Mendorong pengembangan soft skill dan hard skill anggota HIMATIF.</li>
+                  <li>Menjadi jembatan komunikasi antara mahasiswa dan prodi.</li>
+                  <li>Mengadakan kegiatan yang membangun semangat inovasi dan teknologi.</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
       </section>
+      <!-- End Visi Misi Section -->
     </main>
 
-    <footer id="footer" class="bg-blue-900 text-black py-8 px-6">
-      <div class="max-w-6xl mx-auto text-center">
-        <p class="mb-2">
-          Kontak: himaprodi@informatika.ac.id | Telp: 0857-3280-3785
-        </p>
-        <div class="flex justify-center space-x-4">
-          <a
-            href="https://www.instagram.com/himatika.ubhi/"
-            target="_blank"
-            rel="noopener noreferrer"
-            class="hover:text-gray-300"
-          >
-            <i class="bi bi-instagram"></i>
-            Instagram
+    <!-- Footer -->
+    <footer id="footer" class="footer bg-dark text-white py-4">
+      <div class="container text-center">
+        <p class="mb-2">Kontak: himaprodi@informatika.ac.id | Telp: 0857-3280-3785</p>
+        <div class="mb-2">
+          <a href="https://www.instagram.com/himatika.ubhi/" target="_blank" class="text-white">
+            <i class="bi bi-instagram"></i> Instagram
           </a>
         </div>
-        <p class="mt-4 text-sm">
-          &copy; 2025 HIMAPRODI Informatika. All rights reserved.
-        </p>
+        <p class="text-sm mb-0">&copy; 2025 HIMAPRODI Informatika. All rights reserved.</p>
       </div>
     </footer>
 
     <!-- Scroll Top -->
-    <a
-      href="#"
-      id="scroll-top"
-      class="scroll-top d-flex align-items-center justify-content-center"
-      ><i class="bi bi-arrow-up-short"></i
-    ></a>
+    <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center">
+      <i class="bi bi-arrow-up-short"></i>
+    </a>
 
     <!-- Preloader -->
     <div id="preloader"></div>
