--- a/web_bootstrap/contact.html
+++ b/web_bootstrap/contact.html
@@ -186,27 +186,18 @@
         });
     </script>
 
-    <footer id="footer" class="bg-blue-900 text-black py-8 px-6">
-      <div class="max-w-6xl mx-auto text-center">
-        <p class="mb-2">
-          Kontak: himaprodi@informatika.ac.id | Telp: 0857-3280-3785
-        </p>
-        <div class="flex justify-center space-x-4">
-          <a
-            href="https://www.instagram.com/himatika.ubhi/"
-            target="_blank"
-            rel="noopener noreferrer"
-            class="hover:text-gray-300"
-          >
-            <i class="bi bi-instagram"></i>
-            Instagram
-          </a>
-        </div>
-        <p class="mt-4 text-sm">
-          &copy; 2025 HIMAPRODI Informatika. All rights reserved.
-        </p>
-      </div>
-    </footer>
+    <footer id="footer" style="background-color: #012a4a; color: #fff; padding: 40px 0;">
+  <div class="container text-center">
+    <p class="mb-2">Kontak: himaprodi@informatika.ac.id | Telp: 0857-3280-3785</p>
+    <div class="d-flex justify-content-center gap-3">
+      <a href="https://www.instagram.com/himatika.ubhi/" class="text-white">
+        <i class="bi bi-instagram"></i> Instagram
+      </a>
+    </div>
+    <p class="mt-3 text-light">&copy; 2025 HIMAPRODI Informatika. All rights reserved.</p>
+  </div>
+</footer>
+>
 
     <!-- Scroll Top -->
     <a
